@@ -12,6 +12,7 @@ new:
 - new SVDRP command 'MENU [NOW|PRG|SUM]' to call one of the main OSD menus or 
   the summary of the current event. If any epgsearch menu is open a subsequent
   SVDRP call will close it again.
+- changed the maximum number of days for a timer conflict check from 99 to 14
 
 fixes:
 - fixed a crash when pressing 'Ok' in an empty timers done menu
